--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <ul class="nav-links">
                     <li><a href="#features">Features</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
+                    <li><a href="#screenshots">Screenshots</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -57,25 +58,23 @@
             </div>
         </section>
 
+        <section id="screenshots" class="screenshots">
+            <div class="container">
+                <h2>Screenshots</h2>
+                <p>Take a look at how our app works!</p>
+                <div class="screenshot-gallery">
+                    <img src="screenshot1.png" alt="Screenshot 1">
+                    <img src="screenshot2.png" alt="Screenshot 2">
+                    <img src="screenshot3.png" alt="Screenshot 3">
+                </div>
+            </div>
+        </section>
+
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Contact Us</h2>
                 <p>We love hearing from our users! Reach out with your ideas for new features or to report any issues.</p>
-                <form action="#" method="post">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="4" placeholder="Your Message" required></textarea>
-                    </div>
-                    <button type="submit" class="btn">Send Message</button>
-                </form>
+                <p><a href="mailto:popplenut@gmail.com" class="btn">Email Us</a></p>
             </div>
         </section>
     </main>
