--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2>Screenshots</h2>
                 <p>Take a look at how our app works!</p>
                 <div class="screenshot-gallery">
-                    <img src="screenshot1.png" alt="Screenshot 1">
+                    <img src="settings.png" alt="Screenshot 1">
                     <img src="screenshot2.png" alt="Screenshot 2">
                     <img src="screenshot3.png" alt="Screenshot 3">
                 </div>
