--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>Take a look at how our app works!</p>
                 <div class="screenshot-gallery">
                     <img src="settings.png" alt="Screenshot 1">
-                    <img src="screenshot2.png" alt="Screenshot 2">
+                    <img src="invoice.png" alt="Screenshot 2">
                     <img src="screenshot3.png" alt="Screenshot 3">
                 </div>
             </div>
