Update index.html github repo link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#screenshots">Screenshots</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://github.com/ArtursNatarovs/MicroInvoice/tree/main" target="_blank">GitHub</a></li>
                 </ul>
             </div>
         </nav>
