--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="container">
-                <h1>Our Amazing App</h1>
+                <h1>MicroInvoice</h1>
                 <ul class="nav-links">
                     <li><a href="#features">Features</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
@@ -55,7 +55,7 @@
         <section id="how-it-works" class="how-it-works">
             <div class="container">
                 <h2>How It Works</h2>
-                <p>Simply download the app, follow the instructions, and start using it within minutes. It’s designed to be easy for everyone, whether you’re tech-savvy or not.</p>
+                <p>Simply clone repository, run python virtual enviroment, and start using it within minutes. It’s designed to be easy for everyone, whether you’re tech-savvy or not.</p>
             </div>
         </section>
 
@@ -74,7 +74,7 @@
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Contact Us</h2>
-                <p>We love hearing from our users! Reach out with your ideas for new features or to report any issues.</p>
+                <p>I love hearing from our users! Reach out with your ideas for new features or to report any issues.</p>
                 <p><a href="mailto:popplenut@gmail.com" class="btn">Email Us</a></p>
             </div>
         </section>
