--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Our Amazing App. All rights reserved.</p>
+            <p>&copy; 2025 MicroInvoice. All rights reserved.</p>
         </div>
     </footer>
 </body>
